<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            android:theme="@style/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginTop="56dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/inscrivez_vous"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorGrey"
            android:layout_margin="20dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:hint="@string/nom"
            android:background="@drawable/card_right_bg"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="45dp" />


        <EditText
            android:id="@+id/name2"
            android:hint="@string/pr_nom"
            android:background="@drawable/card_right_bg"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="45dp" />


        <EditText
            android:id="@+id/dob"
            android:hint="@string/date_de_naissance"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_right_bg"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="45dp" />


        <EditText
            android:id="@+id/address"
            android:hint="@string/province"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_right_bg"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="45dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/sexe"
                android:textSize="17sp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:text="@string/male"
                    android:layout_weight="1"
                    android:checked="true"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:text="@string/female"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/phone"
            android:hint="@string/num_ro_de_t_l"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_right_bg"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:inputType="phone"
            android:paddingRight="10dp"
            android:layout_height="45dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/box"
                android:layout_width="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/agree_to_our"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/link"
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                android:paddingLeft="3dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:text="@string/s_inscrire"
            android:background="#fbd40f"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGrey"
            android:layout_height="45dp" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>