<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            android:theme="@style/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/s_lectionnez_une_cat_gorie"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorGrey"
        android:layout_margin="15dp"
        android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:id="@+id/ins"
            android:layout_width="match_parent"
            app:cardBackgroundColor="#a04d2e"
            app:cardElevation="3dp"
            app:cardCornerRadius="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardUseCompatPadding="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="130dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/gradient"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="17dp"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:text="@string/inscription"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp" />

            </RelativeLayout>
            <ImageView
                android:layout_width="150dp"
                android:src="@mipmap/pen_register"
                android:layout_gravity="end"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/calender"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#ee1d26"
        app:cardElevation="3dp"
        app:cardCornerRadius="7dp"
        android:clickable="true"
        android:focusable="true"
        app:cardUseCompatPadding="true"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="130dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/gradient"
            android:layout_height="match_parent">

            <TextView
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="17dp"
                android:layout_marginBottom="12dp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:text="@string/calendrier"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp" />

        </RelativeLayout>
        <ImageView
            android:layout_width="150dp"
            android:src="@mipmap/calendar_primusic"
            android:layout_gravity="end"
            android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/vote"
            android:layout_width="match_parent"
            app:cardBackgroundColor="#1b5f46"
            app:cardElevation="3dp"
            app:cardCornerRadius="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardUseCompatPadding="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="130dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/gradient"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="17dp"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:text="@string/vote"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp" />

            </RelativeLayout>
            <ImageView
                android:layout_width="150dp"
                android:src="@mipmap/box_vote_brarudi"
                android:layout_gravity="end"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/actualite"
            android:layout_width="match_parent"
            app:cardBackgroundColor="#fabc1c"
            app:cardElevation="3dp"
            app:cardCornerRadius="7dp"
            android:clickable="true"
            android:focusable="true"
            app:cardUseCompatPadding="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="130dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/gradient"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="17dp"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:text="@string/actualites"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp" />

            </RelativeLayout>
            <ImageView
                android:layout_width="150dp"
                android:src="@mipmap/microphone_actualites"
                android:layout_gravity="end"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>


    </LinearLayout>
    </ScrollView>
</RelativeLayout>